--- a/2/index.html
+++ b/2/index.html
@@ -12,15 +12,15 @@
 
         var Mouse =
         {
-            Flag : false,
-            OldX : 0.0,
-            OldY : 0.0,
-            OldS : 0.0,
-            S : 1.0,
-            X : 0.0,
-            Y : 0.0,
-            PosX : 0.0,
-            PosY : 0.0
+            Flag: false,
+            OldX: 0.0,
+            OldY: 0.0,
+            OldS: 0.0,
+            S: 1.0,
+            X: 0.0,
+            Y: 0.0,
+            PosX: 0.0,
+            PosY: 0.0
         };
         var Screen =
         {
@@ -142,9 +142,9 @@
             neheTexture.image = new Image();
             neheTexture.image.onload = function () {
                 handleLoadedTexture(neheTexture)
-            }
+            };
 
-            neheTexture.image.src = "gradient.png";
+            neheTexture.image.src = "images.jpg";
         }
 
 
@@ -186,40 +186,40 @@
             gl.bindBuffer(gl.ARRAY_BUFFER, cubeVertexPositionBuffer);
             vertices = [
                 // Front face
-                -1.0, -1.0,  1.0,
-                1.0, -1.0,  1.0,
-                1.0,  1.0,  1.0,
-                -1.0,  1.0,  1.0,
+                -1.0, -1.0, 1.0,
+                1.0, -1.0, 1.0,
+                1.0, 1.0, 1.0,
+                -1.0, 1.0, 1.0,
 
                 // Back face
                 -1.0, -1.0, -1.0,
-                -1.0,  1.0, -1.0,
-                1.0,  1.0, -1.0,
+                -1.0, 1.0, -1.0,
+                1.0, 1.0, -1.0,
                 1.0, -1.0, -1.0,
 
                 // Top face
-                -1.0,  1.0, -1.0,
-                -1.0,  1.0,  1.0,
-                1.0,  1.0,  1.0,
-                1.0,  1.0, -1.0,
+                -1.0, 1.0, -1.0,
+                -1.0, 1.0, 1.0,
+                1.0, 1.0, 1.0,
+                1.0, 1.0, -1.0,
 
                 // Bottom face
                 -1.0, -1.0, -1.0,
                 1.0, -1.0, -1.0,
-                1.0, -1.0,  1.0,
-                -1.0, -1.0,  1.0,
+                1.0, -1.0, 1.0,
+                -1.0, -1.0, 1.0,
 
                 // Right face
                 1.0, -1.0, -1.0,
-                1.0,  1.0, -1.0,
-                1.0,  1.0,  1.0,
-                1.0, -1.0,  1.0,
+                1.0, 1.0, -1.0,
+                1.0, 1.0, 1.0,
+                1.0, -1.0, 1.0,
 
                 // Left face
                 -1.0, -1.0, -1.0,
-                -1.0, -1.0,  1.0,
-                -1.0,  1.0,  1.0,
-                -1.0,  1.0, -1.0,
+                -1.0, -1.0, 1.0,
+                -1.0, 1.0, 1.0,
+                -1.0, 1.0, -1.0,
             ];
             gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
             cubeVertexPositionBuffer.itemSize = 3;
@@ -271,12 +271,12 @@
             cubeVertexIndexBuffer = gl.createBuffer();
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, cubeVertexIndexBuffer);
             var cubeVertexIndices = [
-                0, 1, 2,      0, 2, 3,    // Front face
-                4, 5, 6,      4, 6, 7,    // Back face
-                8, 9, 10,     8, 10, 11,  // Top face
-                12, 13, 14,   12, 14, 15, // Bottom face
-                16, 17, 18,   16, 18, 19, // Right face
-                20, 21, 22,   20, 22, 23  // Left face
+                0, 1, 2, 0, 2, 3,    // Front face
+                4, 5, 6, 4, 6, 7,    // Back face
+                8, 9, 10, 8, 10, 11,  // Top face
+                12, 13, 14, 12, 14, 15, // Bottom face
+                16, 17, 18, 16, 18, 19, // Right face
+                20, 21, 22, 20, 22, 23  // Left face
             ];
             gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(cubeVertexIndices), gl.STATIC_DRAW);
             cubeVertexIndexBuffer.itemSize = 1;
@@ -299,8 +299,7 @@
         var yRot = 0;
         var zRot = 0;
         var FramebufferCurrent = 0;
-        function drawFractal()
-        {
+        function drawFractal() {
             mat4.perspective(45, gl.viewportWidth / gl.viewportHeight, 0.1, 100.0, pMatrix);
             mat4.identity(mvMatrix);
             mat4.scale(mvMatrix, [0.5, 0.5, 0.5]);
@@ -319,20 +318,22 @@
 
         var NumOfIters = 2;
 
-        function drawScene()
-        {
+        function SwapBuffer() {
+            FramebufferCurrent ^= 0x1;
+        }
+
+        function drawScene() {
             var i;
             gl.bindFramebuffer(gl.FRAMEBUFFER, rttFramebuffer[FramebufferCurrent]);
             gl.viewport(0, 0, rttFramebuffer[FramebufferCurrent].width, rttFramebuffer[FramebufferCurrent].height);
-            gl.useProgram(shaderProgramfractal);
+            gl.useProgram(shaderProgram);
             gl.clearColor(1.0, 0.0, 0.0, 1.0);
             gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
             drawFractal();
             SwapBuffer();
-            for (i = 0; i < NumOfIters; i++)
-            {
-                gl.bindFramebuffer(gl.FRAMEBUFFER, Framebuffer[FramebufferCurrent]);
-                gl.viewport(0, 0, Framebuffer[FramebufferCurrent].width, Framebuffer[FramebufferCurrent].height);
+            for (i = 0; i < NumOfIters; i++) {
+                gl.bindFramebuffer(gl.FRAMEBUFFER, rttFramebuffer[FramebufferCurrent]);
+                gl.viewport(0, 0, rttFramebuffer[FramebufferCurrent].width, rttFramebuffer[FramebufferCurrent].height);
                 gl.clearColor(0.15 * FramebufferCurrent, 0.59 * FramebufferCurrent, 0.30, 1.0);
                 gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
                 drawCube();
@@ -367,7 +368,7 @@
             gl.vertexAttribPointer(shaderProgram.textureCoordAttribute, cubeVertexTextureCoordBuffer.itemSize, gl.FLOAT, false, 0, 0);
 
             gl.activeTexture(gl.TEXTURE0);
-            gl.bindTexture(gl.TEXTURE_2D, FramebufferTexture[FramebufferCurrent ^ 0x1]);
+            gl.bindTexture(gl.TEXTURE_2D, rttTexture[FramebufferCurrent ^ 0x1]);
             gl.uniform1i(shaderProgram.samplerUniform, 0);
 
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, cubeVertexIndexBuffer);
@@ -378,10 +379,10 @@
         var rttFramebuffer = [];
         var rttTexture = [];
 
-        function initTextureFramebuffer() {
+        function createTextureFramebuffer() {
             var i;
             var renderbuffer = [];
-            for(i = 0; i < 2; i++) {
+            for (i = 0; i < 2; i++) {
                 rttFramebuffer[i] = gl.createFramebuffer();
                 gl.bindFramebuffer(gl.FRAMEBUFFER, rttFramebuffer[i]);
 
@@ -409,16 +410,30 @@
             }
         }
 
+        var lastTime = 0;
+
+        function animate() {
+            var timeNow = new Date().getTime();
+            if (lastTime != 0) {
+                var elapsed = timeNow - lastTime;
+                xRot += (90 * elapsed) / 1000.0;
+                yRot += (90 * elapsed) / 1000.0;
+                zRot += (90 * elapsed) / 1000.0;
+            }
+            lastTime = timeNow;
+        }
+
         function tick() {
             window.requestAnimationFrame(tick);
             drawScene();
+            animate();
         }
 
 
         function webGLStart() {
             var canvas = document.getElementById("lesson05-canvas");
             initGL(canvas);
-            initTextureFramebuffer();
+            createTextureFramebuffer();
             initShaders();
             initBuffers();
             initTexture();
@@ -484,4 +499,5 @@
 
 <canvas id="lesson05-canvas" style="border: none;" width="500" height="500"></canvas>
 
+</body>
 </html>
